icons and Sass build updates

--- a/src/main/java/camber/client/sass/camber.scss
+++ b/src/main/java/camber/client/sass/camber.scss
@@ -1,5 +1,5 @@
 @import "bootstrap/bootstrap";
 @import "flex";
-@import "fullcalendar.min.css";
-@import "loaders.css";
-@import "select2.css";
+@import "fullcalendar";
+@import "loaders";
+@import "select2";
