--- a/src/main/java/camber/client/sass/camber.scss
+++ b/src/main/java/camber/client/sass/camber.scss
@@ -3,3 +3,6 @@
 @import "fullcalendar";
 @import "loaders";
 @import "select2";
+@import "../select2/select2-raw";
+@import "../util/clear-div";
+@import "../grid/camber-grid";
